--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
 </body>
 <script>
+	let smooth = 15;
+
 	// just grab these once and reuse
 	let canvas = document.getElementById("canvas");
 	let context = canvas.getContext("2d");
@@ -284,20 +286,20 @@
 
 			// first segment
 			if(halfyo == 1) {
-				let cp = [x - 50, y];
+				let cp = [x - smooth, y];
 				controlpoints.push(cp);
 				context.quadraticCurveTo(...cp, x, y);
 			
 			// last segment
 			} else if(halfyo == (yocount * 2)) {
-				let cp = [prevx + 50, prevy];
+				let cp = [prevx + smooth, prevy];
 				controlpoints.push(cp);
 				context.quadraticCurveTo(...cp, x, y);
 				
 			// inner segment
 			} else {
-				let cp1 = [prevx + 50, prevy];
-				let cp2 = [x - 50, y];
+				let cp1 = [prevx + smooth, prevy];
+				let cp2 = [x - smooth, y];
 				controlpoints.push(cp1, cp2);
 				context.bezierCurveTo(...cp1, ...cp2, x, y);
 			}
@@ -358,7 +360,7 @@
 		context.moveTo(0, 0);
 		
 		// dive
-		let cp = [parkstartx - 50, parkstarty];
+		let cp = [parkstartx - smooth, parkstarty];
 		controlpoints.push(cp);
 		context.quadraticCurveTo(...cp, parkstartx, parkstarty);
 
@@ -370,8 +372,8 @@
 			let deepx = parkendx + (WIDTH / 6.0);
 			let deepy = deepdepth * ppmeter;
 
-			let cp1 = [parkendx + 50, parkendy];
-			let cp2 = [deepx - 50, deepy];
+			let cp1 = [parkendx + smooth, parkendy];
+			let cp2 = [deepx - smooth, deepy];
 			controlpoints.push(cp1, cp2);
 
 			// bezier takes two control points
@@ -386,7 +388,7 @@
 		let profilex = WIDTH;
 		let profiley = 0;
 
-		cp = [parkx + 50, parky];
+		cp = [parkx + smooth, parky];
 		controlpoints.push(cp);
 		context.quadraticCurveTo(...cp, profilex, profiley);
 
