--- a/divesandsliders.html
+++ b/divesandsliders.html
@@ -6,8 +6,8 @@
 	<style>
 		/* grid container */
 		container {
-			width:100%;
-			display:grid;
+			width: 100%;
+			display: grid;
 			grid-template-columns: 10fr 1fr 1fr 1fr 1fr;
 		}
 
@@ -50,8 +50,15 @@
 			justify-self: center;
 		}
 
+		/* natrually the dropdown will grow to its widest item */
 		container .sliderselect {
 			max-width: 40px;
+		}
+
+		container input[type="text"] {
+			width: 35px;
+			border: none;
+			text-align: center;
 		}
 
 	</style>
@@ -396,6 +403,8 @@ let DiveCanvas = (
 			}
 
 			context.strokeStyle = "blue";
+			context.setLineDash([]);
+
 			context.stroke(path);
 			drawControlPoints(controlpoints);
 
@@ -619,7 +628,7 @@ let Sliders = (
 			pumpOptions,
 			{
 				start: [ 500 ],
-				connect: [false, false],
+				connect: [true, false],
 				tooltips: true,
 				behaviour: "snap"
 			}
@@ -689,7 +698,7 @@ let Sliders = (
 			function(values, handle) {
 				fireRedraw();
 			}
-		)
+		);
 
 		pumpSlider.on(
 			"slide",
@@ -701,6 +710,14 @@ let Sliders = (
 					depthSlider.set([null, value]);
 				}
 
+				fireRedraw();
+			}
+		);
+
+		// for when the pump slider is set using the tooltip
+		pumpSlider.on(
+			"set",
+			function(values, handle) {
 				fireRedraw();
 			}
 		);
@@ -725,10 +742,96 @@ let Sliders = (
 			}
 		);
 
+		ctdSlider.on(
+			"set",
+			function(values, handle) {
+				fireRedraw();
+			}
+		);
+
 		opticsSlider.on(
 			"slide",
 			function(values, handle) {
 				handleDependentSlide(depthSlider, values, handle);
+			}
+		);
+
+		opticsSlider.on(
+			"set",
+			function(values, handle) {
+				fireRedraw();
+			}
+		);
+
+		function createTooltipTextbox(index, slider) {
+			var tooltip = document.createElement("div");
+			var textbox = document.createElement("input");
+			textbox.type = "text";
+					
+			tooltip.className = 'noUi-tooltip';
+			tooltip.appendChild(textbox);
+			
+			// on change, set the slider
+			textbox.addEventListener("change", 
+				function(){
+					var values = [null, null];
+					values[index] = this.value;
+					slider.noUiSlider.set(values)
+				}
+			);
+			
+			// catch all selections and make sure they don't reach the handle
+			// would need these to stop propogation on the generated event
+			// input.addEventListener("mousedown", stopProp);
+			// input.addEventListener("touchstart", stopProp);
+			// input.addEventListener("pointerdown", stopProp);
+			
+			// Find the lower/upper slider handle and insert the tooltip
+			slider.querySelector(index ? ".noUi-handle-upper" : ".noUi-handle-lower").appendChild(tooltip);
+			return textbox;
+		}
+
+		let depthTooltipTextboxes = [
+			createTooltipTextbox(0, depthContainer), 
+			createTooltipTextbox(1, depthContainer)
+		];
+
+		depthSlider.on(
+			"update",
+			function(values, handle) {
+				depthTooltipTextboxes[handle].value = values[handle];
+			}
+		);
+
+		let pumpTooltopTextbox = createTooltipTextbox(0, pumpContainer);
+		pumpSlider.on(
+			"update",
+			function(values) {
+				pumpTooltopTextbox.value = values[0];
+			}
+		)
+
+		let ctdTooltipTextboxes = [
+			createTooltipTextbox(0, ctdContainer), 
+			createTooltipTextbox(1, ctdContainer)
+		];
+
+		ctdSlider.on(
+			"update",
+			function(values, handle) {
+				ctdTooltipTextboxes[handle].value = values[handle];
+			}
+		);
+
+		let opticsTooltipTextboxes = [
+			createTooltipTextbox(0, opticsContainer), 
+			createTooltipTextbox(1, opticsContainer)
+		];
+
+		opticsSlider.on(
+			"update",
+			function(values, handle) {
+				opticsTooltipTextboxes[handle].value = values[handle];
 			}
 		);
 
