--- a/divesandsliders.html
+++ b/divesandsliders.html
@@ -78,10 +78,10 @@
 	<div>
 		Depth
 		<div>
-		<input type="checkbox" title="Altimeter Toggle" checked></input>
+			<input type="checkbox" title="Altimeter Toggle" checked></input>
 		</div>
 		<select id="yoselect" class="sliderselect">
-			<option value="count" disabled>Choose Yo Count ...</option>
+			<option value="count" disabled>Select Yo Count ...</option>
 			<option value="1">1</option>
 			<option value="2" selected>2</option>
 			<option value="3">3</option>
@@ -92,18 +92,49 @@
 	</div>
 	<div>
 		Pump
-		<br>
-		<input type="checkbox" title="Pump Toggle" style="visibility: hidden;"></input>
+		<div>
+			<input type="checkbox" title="Pump Toggle" style="visibility: hidden;"></input>
+		</div>
 	</div>
 	<div>
 		CTD
-		<br>
-		<input type="checkbox" id="ctdcheck" title="CTD Toggle" checked></input>
+		<div>
+			<input type="checkbox" id="ctdcheck" title="CTD Toggle" checked></input>
+		</div>
+		<select id="ctdselect" class="sliderselect">
+			<option value="period" disabled>Select Sample Period ...</option>
+			<option value="-5">-5</option>
+			<option value="-4">-4</option>
+			<option value="-3">-3</option>
+			<option value="-2">-2</option>
+			<option value="-1">-1</option>
+			<option value="0">0</option>
+			<option value="1" selected>1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+		</select>
 	</div>
 	<div>
 		Optics
-		<br>
-		<input type="checkbox" id="opticscheck" title="Optics Toggle" checked></input>
+		<div>
+			<input type="checkbox" id="opticscheck" title="Optics Toggle" checked></input>
+		</div>
+		<select id="opticsselect" class="sliderselect">
+			<option value="period" disabled>Select Sample Period ...</option>
+			<option value="-5">-5</option>
+			<option value="-4">-4</option>
+			<option value="-3">-3</option>
+			<option value="-2">-2</option>
+			<option value="-1">-1</option>
+			<option value="0">0</option>
+			<option value="1" selected>1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+		</select>
 	</div>
 	<div id="canvas-container">
 		<canvas id="canvas"></canvas>
@@ -333,10 +364,9 @@ let DiveCanvas = (
 
 			context.translate(GUTTER, MARGIN);
 
-			// if one yo then there is no min depth
+			// if one yo then there is no min depth (see below)
 			if(yocount <= 1) {
 				yocount = 1;
-				mindepth = 0;
 			
 			// otherwise just set the min depth to ten for yos
 			} else if(mindepth < 0) {
@@ -357,7 +387,7 @@ let DiveCanvas = (
 			// move a half-yo at a time
 			let xdelta = WIDTH / (yocount * 2);
 			let ymax = maxdepth * ppmeter;
-			let ymin = mindepth * ppmeter;
+			let ymin = (yocount == 1) ? 0 : mindepth * ppmeter;
 
 			// keep track of the previous position for control points
 			let prevx = -1;
@@ -887,7 +917,7 @@ document.getElementById("yoselect").addEventListener(
 	"change",
 	function(e) {
 		// always in range
-		DiveCanvas.setYoCount(e.target.selectedIndex);
+		DiveCanvas.setYoCount(e.target.value);
 	}
 );
 
@@ -899,6 +929,14 @@ document.getElementById("ctdcheck").addEventListener(
 	}
 );
 
+document.getElementById("ctdselect").addEventListener(
+	"change",
+	function(e) {
+		window.alert("ctd: " + e.target.value);
+		
+	}
+)
+
 document.getElementById("opticscheck").addEventListener(
 	"change",
 	function(e) {
@@ -906,6 +944,13 @@ document.getElementById("opticscheck").addEventListener(
 		DiveCanvas.setOpticsVisible(e.target.checked);
 	}
 );
+
+document.getElementById("opticsselect").addEventListener(
+	"change",
+	function(e) {
+		window.alert("optics: " + e.target.value);
+	}
+)
 
 </script>
 </html>
